# hardcode

./: readme
00032/dos/ew/: ew.com  (+1 more)
04096/linux/stick animation engine 4000/: COPYING  Makefile.in  README  acinclude.m4  aclocal.m4  compile.pl  compile.sh  configure  configure.ac  libtool  osx_build.sh  reconf.sh  unpackhdr_7z  unpackhdr_gzip
04096/linux/stick animation engine 4000/rel/: sae4-freebsd-ia32  sae4-linux-amd64  sae4-osx-ppc32.dmg  sae4_release_linux-ia32
04096/linux/stick animation engine 4000/src/: Makefile.am  Makefile.in  SDLMain.m  notetable.h  sae4.c  synth.c
04096/other/dirty garden/: COPYING  Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  compile.py  compile.sh  configure  configure.ac  dirty_garden.sln  dirty_garden.vcxproj  osx_build.sh  unpackhdr_lzma
04096/other/dirty garden/rel/: dirty_garden_freebsd-ia32  dirty_garden_freebsd-ia32_compo_fullscreen  dirty_garden_freebsd-ia32_compo_windowed  dirty_garden_linux-amd64  dirty_garden_linux-ia32
04096/other/dirty garden/src/: Makefile.am  Makefile.in  SDLMain.m  config.h.in  footer.asm  header.asm  header.nsm  khronos_gl3.h  khronos_glext.h  main.c  notetable.h  record.c  syn_defs.h  synth2.c
04096/other/ghosts of mars/: CMakeLists.txt  README  README.md  clamp.m  compile.sh  olymposmons.m  refresh.sh
04096/other/ghosts of mars/rel/: ghosts_of_mars_freebsd-amd64  ghosts_of_mars_freebsd-ia32  ghosts_of_mars_freebsd-ia32_compo_720p_fullscreen  ghosts_of_mars_linux-amd64
04096/other/ghosts of mars/src/: dnload.h  image_png.cpp  intro.cpp  main.cpp  songdata.h  synth.c
04096/other/primordial soup/: .gitignore  CMakeLists.txt  LICENCE  README  compile.sh  refresh.sh  release.sh
04096/other/primordial soup/rel/: default.frag.glsl  default.geom.glsl  default.vert.glsl  header.glsl  primordial_soup_freebsd-amd64  primordial_soup_freebsd-ia32  primordial_soup_freebsd-ia32_compo_1080p_fullscreen  primordial_soup_freebsd-ia32_compo_1080p_windowed  primordial_soup_freebsd-ia32_compo_720p_fullscreen  primordial_soup_freebsd-ia32_compo_720p_windowed  primordial_soup_linux-amd64  quad.frag.glsl  worm.geom.glsl
04096/other/primordial soup/src/: default.frag.glsl.hpp  default.geom.glsl.hpp  default.vert.glsl.hpp  dnload.h  header.glsl.hpp  image_png.cpp  intro.cpp  quad.frag.glsl.hpp  quad.vert.glsl  quad.vert.glsl.hpp  synth.asm  synth.h  synth_amd64.asm  worm.geom.glsl.hpp
04096/other/primordial soup/src/synth-test/: compile.sh  main.c  song.asm  synth-processed.asm  synth-processed.objdump  synth.asm  synth.h  synth.objdump
04096/other/whisky in a tube/: .gitignore  CMakeLists.txt  README  README.md  compile.sh
04096/other/whisky in a tube/rel/: whisky_in_a_tube_freebsd-amd64  whisky_in_a_tube_freebsd-ia32  whisky_in_a_tube_freebsd-ia32_1080p_fullscreen_compo  whisky_in_a_tube_freebsd-ia32_1080p_windowed_compo  whisky_in_a_tube_freebsd-ia32_720p_fullscreen_compo  whisky_in_a_tube_freebsd-ia32_720p_windowed_compo  whisky_in_a_tube_linux-amd64
04096/other/whisky in a tube/src/: chip.c  dnload.h  glsl_shader_source.cpp  glsl_shader_source.hpp  image_png.cpp  intro.cpp  main.cpp  notetable.h
04096/windows/architectures/source/tool/: CMakeLists.txt  GLView.cpp  GLView.h  LineEdits.h  Macros.cmake  MainWindow.cpp  MainWindow.h  Utility.h  main.cpp  project.Qt.h  project.changeQt.h  project.h  project.initQt.h  project.readEBML.h  project.readJSON.h  project.struct  project.updateQt.h  project.writeEBML.h  project.writeJSON.h  project.writeQt.h
16384/other/lavos/: COPYING  Makefile.in  README  acinclude.m4  aclocal.m4  compile.sh  configure  configure.ac  debug.props  defaults.props  dnload.bat  dnload.py  lavos.sln  lavos.vcxproj  lavos.vcxproj.filters  release.props  unpackhdr_lzma  unpackhdr_raw  unpackhdr_xz
16384/other/lavos/rel/: lavos_freebsd-amd64  lavos_freebsd-ia32  lavos_freebsd-ia32_compo_fullscreen  lavos_freebsd-ia32_compo_windowed  lavos_linux-amd64  lavos_linux-ia32
16384/other/lavos/src/: CMakeLists.txt  MIDI2Freq.h  Makefile.am  Makefile.in  asm_exit.h  band_limit.cpp  band_limit.hpp  bsd_rand.c  bsd_rand.h  common.cpp  common.hpp  delay.cpp  delay.hpp  dnload.h  dnload_elf32.h  dnload_hash.h  env_gen.cpp  env_gen.hpp  filter.cpp  filter.hpp  find_angular_distance_to_closest_point_in_ll.m  image_png.cpp  intro.cpp  intro.hpp  main.cpp  moelli.m  oscillator.cpp  oscillator.hpp  parameters.h  poly_handler.cpp  poly_handler.hpp  songdata.cpp  synth.cpp  synth.hpp  synth_verbatim.hpp  table_converter.m  voice.cpp  voice.hpp
32768/linux/origami/final/: COPYING  Makefile  Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  autogen.sh  config.status  configure  configure.ac  src_compo.tar.bz2  src_obsolete.tar.bz2  src_softasyna_2005.tar.bz2
32768/linux/origami/final/autom4te.cache/: output.1  requests  traces.0  traces.1
65536/linux/junamatkailuintro/: .gitignore  CMakeLists.txt  LICENSE  README  README.md  compile.sh  refresh.sh
65536/linux/junamatkailuintro/data/: aquila_export.blend  das_auto.blend  lentsikka.blend
65536/linux/junamatkailuintro/rel/: junamatkailuintro_freebsd-amd64  junamatkailuintro_freebsd-ia32  junamatkailuintro_linux-amd64  junamatkailuintro_linux-armv6-rpi  junamatkailuintro_linux-armv6-rpi_compo  junamatkailuintro_osx-amd64.dmg
65536/linux/junamatkailuintro/src/: SDLMain.mm  bsd_rand.c  bsd_rand.h  common.cpp  common.hpp  delay.cpp  delay.hpp  dnload.h  env_gen.cpp  env_gen.hpp  filter.cpp  filter.hpp  font_data.hpp  instrdata.cpp  instrdata_ghetto.cpp  intro.cpp  intro.hpp  main.cpp  model_auto.h  model_lentsikka.h  oscillator.cpp  oscillator.hpp  parameters.h  poly_handler.cpp  poly_handler.hpp  reverb.cpp  reverb.hpp  songdata.cpp  synth.cpp  synth.hpp  verbatim_array.hpp  verbatim_bounding_volume.cpp  verbatim_bounding_volume.hpp  verbatim_color.hpp  verbatim_face.cpp  verbatim_face.hpp  verbatim_font.cpp  verbatim_frame_buffer.cpp  verbatim_frame_buffer.hpp  verbatim_height_map.cpp  (+33 more)
65536/windows/schtroumph 2.0/sc2-2.0/: Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  configure  configure.in  dist.sh  ltmain.sh
(+22894 files in other folders)
